--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.9",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
