--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 #服务器请求地址
-VUE_APP_BASE_API = 'http://huoxing.bitmamo.io/'
-# VUE_APP_BASE_API = 'https://www.haoju.me/'
+# VUE_APP_BASE_API = 'http://huoxing.bitmamo.io/'
+VUE_APP_BASE_API = 'https://www.haoju.me/'
